05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-composer
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: composer
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-auth
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /auth/templates
            pathType: Prefix
            backend:
              service:
                name: auth-frontend
                port:
                  number: 80
          - path: /auth/static
            pathType: Prefix
            backend:
              service:
                name: auth-frontend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-payment-auth
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /payment-auth
            pathType: Prefix
            backend:
              service:
                name: payment-auth-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-inventory
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-payment
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-grafana
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-jaeger
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-prometheus
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-mail
spec:
  ingressClassName: traefik
  rules:
    - host: grupo2-egs.deti.ua.pt
      http:
        paths:
          - path: /mail
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
